--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-body, html, div {
+body, html {
   width: 100%;
   height: 100%;
 }
 
 .parent-div {
   width : 100%;
-  height: 100%;
+  height: 100vh;
 
   display: flex;
   align-items: center;
