--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,20 @@ html {
   justify-content: center;
 }
 
-.child-div {
-  margin-left: auto;
-  margin-right: auto;
+.float-container {
+  padding: 20px;
 }
+
+.float-child-left {
+  width: 25%;
+  float: left;
+  padding-right: 150px;
+  z-index: 2;
+}  
+
+.float-child-right {
+  width: 75%;
+  float: left;
+  padding-left: 50px;
+  z-index: 1;
+} 
